--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -6,19 +6,15 @@
 
       <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
-	          <li class="nav-item"><a href="practice-areas.html" class="nav-link">Practice Areas</a></li>
-	          <li class="nav-item"><a href="attorneys.html" class="nav-link">Attorneys</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+	          <li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
+	          <li class="nav-item"><a href="#" class="nav-link">Profissionais</a></li>
+	          <li class="nav-item"><a href="attorneys.html" class="nav-link">Empresas</a></li>
+	          <li class="nav-item"><a href="contact.html" class="nav-link">Login</a></li>
 	        </ul>
 	      </div>
 	    </div>
 	  </nav>
     <!-- END nav -->
-
-
 
     <div class="hero-wrap js-fullheight" style="background-image: url({% static 'images/bg_1.jpg' %});" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
@@ -29,7 +25,7 @@
             <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">
             	<span>Empreendimento</span> . <span>Negocio</span> . <span>Vagas!</span>
             </h1>
-            <p><a href="#" class="btn btn-primary py-3 px-4">Começe a procurar agora mesmo!</a></p>
+            <p><a href="#login" class="btn btn-primary py-3 px-4">Começe a procurar agora mesmo!</a></p>
           </div>
         </div>
       </div>
@@ -70,74 +66,6 @@
       </div>
     </section>
 
-    <section class="ftco-counter" id="section-counter">
-    	<div class="container-fluid">
-    		<div class="row d-flex">
-    			<div class="col-md-6 d-flex">
-    				<div class="img d-flex align-self-stretch align-items-center justify-content-center" style="background-image:url({% static 'images/about.jpg' %});">
-    					<a href="https://vimeo.com/45830194" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
-    						<span class="icon-play"></span>
-    					</a>
-    				</div>
-    			</div>
-    			<div class="col-md-6 px-5 py-5">
-    				<div class="row justify-content-start pt-3 pb-3">
-		          <div class="col-md-12 heading-section ftco-animate">
-		          	<span class="subheading">Fun Facts</span>
-		            <h2 class="mb-4">Whisper Lawfirm Stablished Since 1990</h2>
-		            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-		          </div>
-		        </div>
-		    		<div class="row">
-		          <div class="col-md-6 justify-content-center counter-wrap ftco-animate">
-		            <div class="block-18 text-center py-4 bg-light mb-4">
-		              <div class="text">
-		              	<div class="icon d-flex justify-content-center align-items-center">
-		              		<span class="flaticon-lawyer"></span>
-		              	</div>
-		                <strong class="number" data-number="500">0</strong>
-		                <span>Qualified Lawyers</span>
-		              </div>
-		            </div>
-		          </div>
-		          <div class="col-md-6 justify-content-center counter-wrap ftco-animate">
-		            <div class="block-18 text-center py-4 bg-light mb-4">
-		              <div class="text">
-		              	<div class="icon d-flex justify-content-center align-items-center">
-		              		<span class="flaticon-handshake"></span>
-		              	</div>
-		                <strong class="number" data-number="2000">0</strong>
-		                <span>Trusted Clients</span>
-		              </div>
-		            </div>
-		          </div>
-		          <div class="col-md-6 justify-content-center counter-wrap ftco-animate">
-		            <div class="block-18 text-center py-4 bg-light mb-4">
-		              <div class="text">
-		              	<div class="icon d-flex justify-content-center align-items-center">
-		              		<span class="ion-ios-checkbox-outline"></span>
-		              	</div>
-		                <strong class="number" data-number="1500">0</strong>
-		                <span>Successful Cases</span>
-		              </div>
-		            </div>
-		          </div>
-		          <div class="col-md-6 justify-content-center counter-wrap ftco-animate">
-		            <div class="block-18 text-center py-4 bg-light mb-4">
-		              <div class="text">
-		              	<div class="icon d-flex justify-content-center align-items-center">
-		              		<span class="flaticon-medal"></span>
-		              	</div>
-		                <strong class="number" data-number="100">0</strong>
-		                <span>Honors &amp; Awards</span>
-		              </div>
-		            </div>
-		          </div>
-		        </div>
-	        </div>
-        </div>
-    	</div>
-    </section>
 
     <section class="ftco-section bg-light">
     	<div class="container">
@@ -151,7 +79,7 @@
         	<div class="col-md-3 col-lg-2 text-center">
         		<div class="practice-area ftco-animate">
         			<div class="icon d-flex justify-content-center align-items-center">
-        				<span class="flaticon-family"></span>
+        				<span class="flaticon-050-bee"></span>
         			</div>
         			<h3><a href="#">Family Law</a></h3>
         		</div>
@@ -159,7 +87,7 @@
         	<div class="col-md-3 col-lg-2 text-center">
         		<div class="practice-area ftco-animate">
         			<div class="icon d-flex justify-content-center align-items-center">
-        				<span class="flaticon-auction"></span>
+        				<span class="flaticon-049-rain"></span>
         			</div>
         			<h3><a href="#">Business Law</a></h3>
         		</div>
@@ -167,7 +95,7 @@
         	<div class="col-md-3 col-lg-2 text-center">
         		<div class="practice-area ftco-animate">
         			<div class="icon d-flex justify-content-center align-items-center">
-        				<span class="flaticon-shield"></span>
+        				<span class="flaticon-048-plant"></span>
         			</div>
         			<h3><a href="#">Insurance Law</a></h3>
         		</div>
@@ -175,7 +103,7 @@
         	<div class="col-md-3 col-lg-2 text-center">
         		<div class="practice-area ftco-animate">
         			<div class="icon d-flex justify-content-center align-items-center">
-        				<span class="flaticon-handcuffs"></span>
+        				<span class="flaticon-047-pumpkin"></span>
         			</div>
         			<h3><a href="#">Criminal Law</a></h3>
         		</div>
@@ -183,7 +111,7 @@
         	<div class="col-md-3 col-lg-2 text-center">
         		<div class="practice-area ftco-animate">
         			<div class="icon d-flex justify-content-center align-items-center">
-        				<span class="flaticon-house"></span>
+        				<span class="flaticon-045-tomato"></span>
         			</div>
         			<h3><a href="#">Property Law</a></h3>
         		</div>
@@ -191,7 +119,7 @@
         	<div class="col-md-3 col-lg-2 text-center">
         		<div class="practice-area ftco-animate">
         			<div class="icon d-flex justify-content-center align-items-center">
-        				<span class="flaticon-employee"></span>
+        				<span class="flaticon-041-irrigation"></span>
         			</div>
         			<h3><a href="#">Employment Law</a></h3>
         		</div>
@@ -199,7 +127,7 @@
         	<div class="col-md-3 col-lg-2 text-center">
         		<div class="practice-area ftco-animate">
         			<div class="icon d-flex justify-content-center align-items-center">
-        				<span class="flaticon-fire"></span>
+        				<span class="flaticon-042-silo"></span>
         			</div>
         			<h3><a href="#">Fire Accident</a></h3>
         		</div>
@@ -207,7 +135,7 @@
         	<div class="col-md-3 col-lg-2 text-center">
         		<div class="practice-area ftco-animate">
         			<div class="icon d-flex justify-content-center align-items-center">
-        				<span class="flaticon-money"></span>
+        				<span class="flaticon-037-leaf-blower"></span>
         			</div>
         			<h3><a href="#">Financial Law</a></h3>
         		</div>
@@ -215,7 +143,7 @@
         	<div class="col-md-3 col-lg-2 text-center">
         		<div class="practice-area ftco-animate">
         			<div class="icon d-flex justify-content-center align-items-center">
-        				<span class="flaticon-medicine"></span>
+        				<span class="flaticon-033-snow"></span>
         			</div>
         			<h3><a href="#">Drug Offenses</a></h3>
         		</div>
@@ -223,7 +151,7 @@
         	<div class="col-md-3 col-lg-2 text-center">
         		<div class="practice-area ftco-animate">
         			<div class="icon d-flex justify-content-center align-items-center">
-        				<span class="flaticon-handcuffs"></span>
+        				<span class="flaticon-030-mushroom"></span>
         			</div>
         			<h3><a href="#">Sexual Offenses</a></h3>
         		</div>
@@ -374,93 +302,6 @@
     			</div>
     		</div>
     	</div>
-    </section>
-
-    <section class="ftco-section testimony-section bg-secondary">
-      <div class="container">
-        <div class="row justify-content-center mb-5 pb-3">
-          <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
-          	<span class="subheading">Testimonial</span>
-            <h2 class="mb-4">Happy Clients</h2>
-          </div>
-        </div>
-        <div class="row ftco-animate">
-          <div class="col-md-12">
-            <div class="carousel-testimony owl-carousel ftco-owl">
-              <div class="item">
-                <div class="testimony-wrap text-center py-4 pb-5">
-                  <div class="user-img mb-4" style="background-image: url({% static 'images/person_1.jpg' %})">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text p-3">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Arthur Browner</p>
-                    <span class="position">Client</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap text-center py-4 pb-5">
-                  <div class="user-img mb-4" style="background-image: url({% static 'images/person_2.jpg' %})">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text p-3">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Arthur Browner</p>
-                    <span class="position">Client</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap text-center py-4 pb-5">
-                  <div class="user-img mb-4" style="background-image: url({% static 'images/person_3.jpg' %})">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text p-3">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Arthur Browner</p>
-                    <span class="position">Client</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap text-center py-4 pb-5">
-                  <div class="user-img mb-4" style="background-image: url({% static 'images/person_4.jpg' %})">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text p-3">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Arthur Browner</p>
-                    <span class="position">Client</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap text-center py-4 pb-5">
-                  <div class="user-img mb-4" style="background-image: url({% static 'images/person_3.jpg' %})">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text p-3">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Arthur Browner</p>
-                    <span class="position">Client</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </section>
 
     <section class="ftco-section bg-light">
