--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -32,10 +32,22 @@
 
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Controle Soluções Agroecológicas</a>
+	      <a class="navbar-brand" href="{% url 'home' %}">Controle Soluções Agroecológicas</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
+          <div class="collapse navbar-collapse" id="ftco-nav">
+                <ul class="navbar-nav ml-auto">
+                  <li class="nav-item"><a href="{% url 'home' %}" class="nav-link">Home</a></li>
+                  <li class="nav-item"><a href="{% url 'profissionais' %}" class="nav-link">Profissionais</a></li>
+                  <li class="nav-item"><a href="attorneys.html" class="nav-link">Empresas</a></li>
+                  <li class="nav-item"><a href="contact.html" class="nav-link">Login</a></li>
+                </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- END nav -->
+
 
 
             {% block content %}
