--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -4,18 +4,6 @@
 
 {% block content %}
 
-      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="#" class="nav-link">Profissionais</a></li>
-	          <li class="nav-item"><a href="attorneys.html" class="nav-link">Empresas</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Login</a></li>
-	        </ul>
-	      </div>
-	    </div>
-	  </nav>
-    <!-- END nav -->
-
     <div class="hero-wrap js-fullheight" style="background-image: url({% static 'images/bg_1.jpg' %});" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
@@ -34,34 +22,28 @@
     <section class="ftco-section ftco-no-pb services-section">
       <div class="container">
         <div class="row no-gutters d-flex">
-          <div class="col-md-3 text-center services align-self-stretch ftco-animate p-4">
+          <div class="col-md-4 text-center services align-self-stretch ftco-animate p-4">
             <div class="icon"><span class="flaticon-001-seed"></span></div>
             <div class="media-body">
-              <h3 class="heading mb-3"><a href="#">Get Your Legal Advice</a></h3>
-              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+              <h3 class="heading mb-3"><a href="#">Oportunidades de emprego</a></h3>
+              <p>Encontre oportunidades de emprego de acordo com o seu perfil profissional.</p>
             </div>
           </div>
-          <div class="col-md-3 text-center services align-self-stretch ftco-animate p-4">
+          <div class="col-md-4 text-center services align-self-stretch ftco-animate p-4">
             <div class="icon"><span class="flaticon-008-farm"></span></div>
             <div class="media-body">
-              <h3 class="heading mb-3"><a href="#">Work with Expert Lawyers</a></h3>
-              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+              <h3 class="heading mb-3"><a href="#">Desenvolvimento sustentável</a></h3>
+              <p>A Controle preconiza o emprego de práticas agroecológicas, promovendo uma agricultura sustentável.</p>
             </div>
           </div>
-          <div class="col-md-3 text-center services align-self-stretch ftco-animate p-4">
+          <div class="col-md-4 text-center services align-self-stretch ftco-animate p-4">
             <div class="icon"><span class="flaticon-015-axe"></span></div>
             <div class="media-body">
-              <h3 class="heading mb-3"><a href="#">Have Great Discounted Rates</a></h3>
-              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+              <h3 class="heading mb-3"><a href="#">Facilidade para o produtor</a></h3>
+              <p>Na Controle o produtor encontra o profissional ideal para as suas necessidades.</p>
             </div>
           </div>
-          <div class="col-md-3 text-center services align-self-stretch ftco-animate p-4">
-            <div class="icon"><span class="ion-ios-help-circle-outline"></span></div>
-            <div class="media-body">
-              <h3 class="heading mb-3"><a href="#">Review Your Case Documents</a></h3>
-              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-            </div>
-          </div>
+
         </div>
       </div>
     </section>
@@ -71,8 +53,8 @@
     	<div class="container">
     		<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 text-center heading-section ftco-animate">
-          	<span class="subheading">Practice Areas</span>
-            <h2 class="mb-4">Practice Areas</h2>
+          	<span class="subheading">Áreas de Atuação</span>
+            <h2 class="mb-4">Áreas de Atuação</h2>
           </div>
         </div>
         <div class="row d-flex justify-content-center">
@@ -81,15 +63,7 @@
         			<div class="icon d-flex justify-content-center align-items-center">
         				<span class="flaticon-050-bee"></span>
         			</div>
-        			<h3><a href="#">Family Law</a></h3>
-        		</div>
-        	</div>
-        	<div class="col-md-3 col-lg-2 text-center">
-        		<div class="practice-area ftco-animate">
-        			<div class="icon d-flex justify-content-center align-items-center">
-        				<span class="flaticon-049-rain"></span>
-        			</div>
-        			<h3><a href="#">Business Law</a></h3>
+        			<h3><a href="#">Controle Biológico</a></h3>
         		</div>
         	</div>
         	<div class="col-md-3 col-lg-2 text-center">
@@ -97,15 +71,23 @@
         			<div class="icon d-flex justify-content-center align-items-center">
         				<span class="flaticon-048-plant"></span>
         			</div>
-        			<h3><a href="#">Insurance Law</a></h3>
+        			<h3><a href="#">Práticas Conservacionistas do Solo</a></h3>
         		</div>
         	</div>
         	<div class="col-md-3 col-lg-2 text-center">
         		<div class="practice-area ftco-animate">
         			<div class="icon d-flex justify-content-center align-items-center">
-        				<span class="flaticon-047-pumpkin"></span>
+        				<span class="flaticon-041-irrigation"></span>
         			</div>
-        			<h3><a href="#">Criminal Law</a></h3>
+        			<h3><a href="#">Sistemas de Irrigação</a></h3>
+        		</div>
+        	</div>
+        	<div class="col-md-3 col-lg-2 text-center">
+        		<div class="practice-area ftco-animate">
+        			<div class="icon d-flex justify-content-center align-items-center">
+        				<span class="flaticon-031-insect"></span>
+        			</div>
+        			<h3><a href="#">Manejo Integrado de Pragas</a></h3>
         		</div>
         	</div>
         	<div class="col-md-3 col-lg-2 text-center">
@@ -113,10 +95,10 @@
         			<div class="icon d-flex justify-content-center align-items-center">
         				<span class="flaticon-045-tomato"></span>
         			</div>
-        			<h3><a href="#">Property Law</a></h3>
+        			<h3><a href="#">Manejo de Culturas</a></h3>
         		</div>
         	</div>
-        	<div class="col-md-3 col-lg-2 text-center">
+        	<!-- <div class="col-md-3 col-lg-2 text-center">
         		<div class="practice-area ftco-animate">
         			<div class="icon d-flex justify-content-center align-items-center">
         				<span class="flaticon-041-irrigation"></span>
@@ -155,7 +137,7 @@
         			</div>
         			<h3><a href="#">Sexual Offenses</a></h3>
         		</div>
-        	</div>
+        	</div> --!>
         </div>
     	</div>
     </section>
