--- a/core/templates/core/profissionais.html
+++ b/core/templates/core/profissionais.html
@@ -214,8 +214,7 @@
                 </div>
               </div>
               <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url({% static 'images/image_3.jpg' %});"></a>
-                <div class="text">
+/                <div class="text">
                   <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
                   <div class="meta">
                     <div><a href="#"><span class="icon-calendar"></span> January 15, 2019</a></div>
