criado telas e urls para login e cadastro basico

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -41,7 +41,8 @@
                   <li class="nav-item"><a href="{% url 'home' %}" class="nav-link">Home</a></li>
                   <li class="nav-item"><a href="{% url 'profissionais' %}" class="nav-link">Profissionais</a></li>
                   <li class="nav-item"><a href="attorneys.html" class="nav-link">Empresas</a></li>
-                  <li class="nav-item"><a href="contact.html" class="nav-link">Login</a></li>
+                  <li class="nav-item"><a href="{% url 'login' %}" class="nav-link">Login</a></li>
+                  <li class="nav-item"><a href="{% url 'signup' %}" class="nav-link">Cadastro</a></li>
                 </ul>
           </div>
         </div>
