--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -41,8 +41,14 @@
                   <li class="nav-item"><a href="{% url 'home' %}" class="nav-link">Home</a></li>
                   <li class="nav-item"><a href="{% url 'profissionais' %}" class="nav-link">Profissionais</a></li>
                   <li class="nav-item"><a href="attorneys.html" class="nav-link">Empresas</a></li>
-                  <li class="nav-item"><a href="{% url 'login' %}" class="nav-link">Login</a></li>
+                  <li class="nav-item"><a href="{% url 'login_view' %}" class="nav-link">Login</a></li>
                   <li class="nav-item"><a href="{% url 'signup' %}" class="nav-link">Cadastro</a></li>
+
+                  <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a href="{% url 'logout_view' %}" class="nav-link">Logout</a></li>
+                  </ul>
+
+
                 </ul>
           </div>
         </div>
