ajuste cadastro usuario e permissoes

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -11,7 +11,7 @@
           <div class="col-md-10 text-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
           	<h2 class="subheading" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Bem vindo, estamos aqui para ajudar!</h2>
             <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">
-            	<span>Empreendimento</span> . <span>Negocio</span> . <span>Vagas!</span>
+            	<span>Empreendimento</span> . <span>Negócio</span> . <span>Vagas!</span>
             </h1>
             <p><a href="#login" class="btn btn-primary py-3 px-4">Começe a procurar agora mesmo!</a></p>
           </div>
