--- a/core/templates/core/signup.html
+++ b/core/templates/core/signup.html
@@ -6,7 +6,8 @@
         <h1>Signup</h1>
         <form class="site-form" action="/signup/" method="post">
             {% csrf_token %}
-            {{ form  }}
+            {{ user_form.as_p  }}
+            {{ profile_form.as_p  }}
             <input type="submit" value="Signup">
         </form>
     </div>
