Arrumando rotas, views, profissional

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -41,8 +41,8 @@
           <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item"><a href="{% url 'home' %}" class="nav-link">Home</a></li>
-                  <li class="nav-item"><a href="{% url 'profissionais' %}" class="nav-link">Profissionais</a></li>
-                  <li class="nav-item"><a href="attorneys.html" class="nav-link">Empresas</a></li>
+                  <li class="nav-item"><a href="{% url 'profissional:index' %}" class="nav-link">Profissionais</a></li>
+                  <li class="nav-item"><a href="{% url 'empresa:index' %}" class="nav-link">Empresas</a></li>
                   <li class="nav-item"><a href="{% url 'login_view' %}" class="nav-link">Login</a></li>
                   <li class="nav-item"><a href="{% url 'signup' %}" class="nav-link">Cadastro</a></li>
 
