--- a/core/templates/core/userprofile_form.html
+++ b/core/templates/core/userprofile_form.html
@@ -6,8 +6,10 @@
         <h1>Signup</h1>
         <form class="site-form" action="/signup/" method="post">
             {% csrf_token %}
+            {{form.as_table}}
 
-            {{ user_form.as_p  }}
+           <!-- {{ user_form.as_p  }}
+            {{ profile_form.as_p  }} -->
             <input type="submit" value="Signup">
         </form>
     </div>
