--- a/profissional/templates/profissional/create.html
+++ b/profissional/templates/profissional/create.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="ftco-section ftco-degree-bg">
         <h1>Signup</h1>
-        <form class="site-form" action="/signup/" method="post">
+        <form class="site-form" action="/profissional/create/" method="post">
             {% csrf_token %}
 
             {{ user_form.as_p  }}
