--- a/profissional/templates/profissional/profissional_list.html
+++ b/profissional/templates/profissional/profissional_list.html
@@ -24,17 +24,52 @@
               <p></p>
             </div>
             <div>
-              <p>Profissional Nome</p>
+              <h1>Profissionais</h1>
+              <div class="container-fluid">
+                {% for prof in profissionais %}
+
+                <div class="row  border rounded">
+<!--                    <div class="col-12 col-md-2">.col-12 .col-md-8</div>-->
+<!--                    <div class="col-6 col-md-10"></div>-->
+
+                  <div class="col-sm-9">
+                    <div class="row">
+                      <div class="col-2 col-sm-2  border rounded">
+                        <div class="media" >
+                          <img class="mr-3 img-fluid rounded-circle" src="/media/{{prof.foto}}" alt="Generic placeholder image">
+                        </div>
+                      </div>
+                      <div class="col-10 col-sm-10">
+                        <h4>{{ prof.user.first_name}}</h4>
+                        <p>{{ prof.categoria }}</p>
+                        {% if prof.sn_consultor %}
+                          <label>Consultor</label>
+                          <p>R${{prof.valor_hora }}</p>
+                        {% endif %}
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+
+                {% empty %}
+                {% endfor %}
+              </div>
+
+<!--              <ul>-->
+<!--              {% for prof in object_list %}-->
+<!--                <li>{{ prof.user.first_name }}</li>-->
+<!--                <li> {{ prof.user.email }}</li>-->
+<!--                {% empty %}-->
+<!--                  <li>Fim</li>-->
+<!--              {% endfor %}-->
+<!--              </ul>-->
+
             </div>
-            <div>
-              <p>teste</p>
-            </div>
-            <div>
-              <p>teste</p>
-            </div>
+
           </div> <!-- .col-md-8 -->
 
-          <div class="col-lg-4 sidebar ftco-animate">
+          <div class="col-lg-3 sidebar ftco-animate">
             <div class="sidebar-box">
               <form action="#" class="search-form">
                 <div class="form-group">
@@ -45,13 +80,21 @@
             </div>
             <div class="sidebar-box ftco-animate">
               <div class="categories">
+                <h3>Área Profissional</h3>
+
+                <li>
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                    Criar Perfil Profissional
+                  </button>
+                  <a href="{% url 'profissional:create' %}">Criar Perfil Profissional<span class="ion-ios-arrow-forward"></span></a>
+                </li>
+
                 <h3>Categories</h3>
-                <li><a href="{% url 'profissional:create' %}">CRIAR<span class="ion-ios-arrow-forward"></span></a></li>
-                <li><a href="#">Business Law <span class="ion-ios-arrow-forward"></span></a></li>
-                <li><a href="#">Criminal Law <span class="ion-ios-arrow-forward"></span></a></li>
-                <li><a href="#">Insurance Law <span class="ion-ios-arrow-forward"></span></a></li>
-                <li><a href="#">Emloyment Law <span class="ion-ios-arrow-forward"></span></a></li>
-                <li><a href="#">Property Law <span class="ion-ios-arrow-forward"></span></a></li>
+                <li><a href="#">Controle Biológico <span class="ion-ios-arrow-forward"></span></a></li>
+                <li><a href="#">Práticas Conservacionistas do Solo <span class="ion-ios-arrow-forward"></span></a></li>
+                <li><a href="#">Sistemas de Irrigação<span class="ion-ios-arrow-forward"></span></a></li>
+                <li><a href="#">Manejo Integrado de Pragas <span class="ion-ios-arrow-forward"></span></a></li>
+                <li><a href="#">Manejo de Culturas <span class="ion-ios-arrow-forward"></span></a></li>
               </div>
             </div>
 
@@ -60,5 +103,39 @@
         </div>
       </div>
     </section> <!-- .section -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form class="site-form" action="/profissional/create/" method="POST">
+            {% csrf_token %}
+
+            {{ form.as_p  }}
+<!--            <input type="submit" value="Signup" id="ok">-->
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <input type="submit" class="btn btn-primary" value="Signup" >
+      </div>
+        </form>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
 
 {% endblock %}
