Ajuste em tela de profissionais, detalhes de profissionais e perfil profissional

--- a/profissional/templates/profissional/prof_prof_detalhes.html
+++ b/profissional/templates/profissional/prof_prof_detalhes.html
@@ -3,16 +3,13 @@
 
 {% block prof_content %}
 
-<section class="ftco-section ftco-degree-bg">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 order-md-last ftco-animate">
-
-    <h1>asd</h1>
-          </div>
-          </div>
-          </div>
-
-</section>
+<div class="col-lg-8 order-md-last ftco-animate">
+    <div>
+      <h1>Detalhes</h1>
+      <div class="container-fluid">
+          {{prof.user.first_name}}
+      </div>
+    </div>
+</div>
 
 {% endblock %}
