--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -8558,7 +8558,7 @@ textarea.form-control {
   font-size: 24px; }
 
 .ftco-section {
-  padding: 7em 0;
+  padding-top: 5%;
   position: relative; }
   @media (max-width: 767.98px) {
     .ftco-section {
