alterações tela Profissional

--- a/profissional/templates/profissional/base_prof.html
+++ b/profissional/templates/profissional/base_prof.html
@@ -41,7 +41,7 @@
                   </li>
                 {% else %}
                   <li>
-                    <a href="{% url 'profissional:edit' pk=prof.pk %}">Meu Perfil Profissional<span class="ion-ios-arrow-forward"></span></a>
+                    <a href="{% url 'profissional:edit' pk=is_prof.pk %}">Meu Perfil Profissional<span class="ion-ios-arrow-forward"></span></a>
                   </li>
                 {% endif %}
                 <h3>Categories</h3>
