--- a/empresa/templates/empresa/index.html
+++ b/empresa/templates/empresa/index.html
@@ -1,12 +1,9 @@
-{% extends 'core.
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'empresa/base.html' %}
 
-</body>
-</html>
+{% block emp_content %}
+<div class="col-lg-8 order-md-last ftco-animate">
+    <div>
+        <h1>teste</h1>
+    </div>
+</div>
+{% endblock %}
